/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.MarketRoles.Contracts";

message RequestChangeOfSupplier {
  string transaction_id = 1;
  string energy_supplier_gln_number = 2;
  string social_security_number = 3;
  string vat_number = 4;
  string accounting_point_gsrn_number = 5;
  google.protobuf.Timestamp start_date = 6;
}

message RequestMoveIn {
  string transaction_id = 1;
  string energy_supplier_gln_number = 2;
  string social_security_number = 3;
  string vat_number = 4;
  string consumer_name = 5;
  string accounting_point_gsrn_number = 6;
  google.protobuf.Timestamp move_in_date = 7;
}

message ForwardConsumerDetails {
  string accounting_point_id = 1;
  string business_process_id = 2;
  string transaction = 3;
  string id = 4;
}

message NotifyCurrentSupplier {
  string accounting_point_id = 1;
  string business_process_id = 2;
  string transaction = 3;
  string id = 4;
}

message ForwardMeteringPointDetails {
  string accounting_point_id = 1;
  string business_process_id = 2;
  string transaction = 3;
  string id = 4;
}

message ChangeSupplier {
  string accounting_point_id = 1;
  string transaction = 2;
  string id = 3;
}

message EffectuateConsumerMoveIn {
  string accounting_point_id = 1;
  string transaction = 2;
  string id = 3;
}

message MarketRolesEnvelope {
  oneof MarketRolesMessages {
    RequestChangeOfSupplier requestChangeOfSupplier = 1;
    RequestMoveIn requestMoveIn = 2;
    ForwardConsumerDetails forwardConsumerDetails = 3;
    NotifyCurrentSupplier notifyCurrentSupplier = 4;
    ForwardMeteringPointDetails forwardMeteringPointDetails = 5;
    ChangeSupplier changeSupplier = 6;
    EffectuateConsumerMoveIn effectuateConsumerMoveIn = 7;
  }
}
